[gd_scene load_steps=2 format=3 uid="uid://dstationbuffpopup"]

[ext_resource type="Script" path="res://scripts/ui/station_buff_popup.gd" id="1_popup"]

[node name="StationBuffPopup" type="CanvasLayer"]
layer = 50
process_mode = 3
script = ExtResource("1_popup")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.85)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -280.0
offset_top = -280.0
offset_right = 280.0
offset_bottom = 280.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "STATION ONLINE"
horizontal_alignment = 1

[node name="SubtitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Choose a buff"
horizontal_alignment = 1

[node name="ChoicesContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1
theme_override_constants/separation = 12

[node name="Choice1" type="PanelContainer" parent="VBoxContainer/ChoicesContainer"]
custom_minimum_size = Vector2(500, 80)
layout_mode = 2
size_flags_horizontal = 4

[node name="HBox1" type="HBoxContainer" parent="VBoxContainer/ChoicesContainer/Choice1"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="NameLabel" type="Label" parent="VBoxContainer/ChoicesContainer/Choice1/HBox1"]
layout_mode = 2
size_flags_horizontal = 3
text = "Stat Name"

[node name="BonusLabel" type="Label" parent="VBoxContainer/ChoicesContainer/Choice1/HBox1"]
layout_mode = 2
text = "+5%"
horizontal_alignment = 2

[node name="RarityLabel" type="Label" parent="VBoxContainer/ChoicesContainer/Choice1/HBox1"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Uncommon"
horizontal_alignment = 2

[node name="Choice2" type="PanelContainer" parent="VBoxContainer/ChoicesContainer"]
custom_minimum_size = Vector2(500, 80)
layout_mode = 2
size_flags_horizontal = 4

[node name="HBox2" type="HBoxContainer" parent="VBoxContainer/ChoicesContainer/Choice2"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="NameLabel" type="Label" parent="VBoxContainer/ChoicesContainer/Choice2/HBox2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Stat Name"

[node name="BonusLabel" type="Label" parent="VBoxContainer/ChoicesContainer/Choice2/HBox2"]
layout_mode = 2
text = "+5%"
horizontal_alignment = 2

[node name="RarityLabel" type="Label" parent="VBoxContainer/ChoicesContainer/Choice2/HBox2"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Rare"
horizontal_alignment = 2

[node name="Choice3" type="PanelContainer" parent="VBoxContainer/ChoicesContainer"]
custom_minimum_size = Vector2(500, 80)
layout_mode = 2
size_flags_horizontal = 4

[node name="HBox3" type="HBoxContainer" parent="VBoxContainer/ChoicesContainer/Choice3"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="NameLabel" type="Label" parent="VBoxContainer/ChoicesContainer/Choice3/HBox3"]
layout_mode = 2
size_flags_horizontal = 3
text = "Stat Name"

[node name="BonusLabel" type="Label" parent="VBoxContainer/ChoicesContainer/Choice3/HBox3"]
layout_mode = 2
text = "+5%"
horizontal_alignment = 2

[node name="RarityLabel" type="Label" parent="VBoxContainer/ChoicesContainer/Choice3/HBox3"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Epic"
horizontal_alignment = 2

[node name="IgnoreButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "IGNORE"
